<resources>
    <string name="app_name">SchoolLearnFB</string>
    <string name="good_registration">Good registration</string>
    <string name="error_authentication_canceled"> Authentication Failed </string>
    <string name="error_no_internet">Internet Connexion Not Available </string>
    <string name="error_unknown_error">Unknown Error </string>
    <string name="login_1">Your Phone Number</string>
    <string name="login_2">Send Verification Code</string>
    <string name="login_3">By signing up you agree to the Simplex Point</string>
    <string name="login_4">Terms of Service </string>
    <string name="login_5"> \  and  \   </string>
    <string name="login_6">  Privacy Policy</string>
    <string name="login_7">Simple</string>
    <string name="login_8">Business</string>
    <string name="verify_1">Verify</string>
    <string name="verify_2">We\'ve sent a Code via SMS. Please enter</string>
    <string name="verify_3">the 6 digit code to verify.</string>
    <string name="verify_4">Enter 6 Digit Verification Code</string>
    <string name="verify_5">Verify My Device</string>
    <string name="notification_code_not_match">Sorry, Code not match Change and try again</string>
    <string name="notification_error_ssl_cert_invalid">SSL nofification WebWiew...</string>
    <string name="notification_error_company_name_1">The title must contain at least 3 characters</string>
    <string name="notification_error_company_name_2">The title contains a bad character</string>
    <string name="notification_error_location_exist">This location already exists, please change name</string>
    <string name="notification_error_address_exist">This address location already exist, please change it</string>
    <string name="notification_error_no_access_to_action">You do not have enough rights to perform this action!</string>
    <string name="empty_file">This field can not be empty</string>
    <string name="empty_file_plus">This field must have at least 2 characters</string>
    <string name="notification_normal_phone">Enter normal phone number</string>
    <string name="notification_verify_phone">Please check your phone phoneNumber</string>
    <string name="check_file_before_continuing">Please check fields before continuing</string>
    <string name="message_not_available_offline">Sorry but this feature is not available in offline mode </string>
    <string name="send_image">Sending images...</string>
    <string name="upload_complete">Upload complete!</string>
    <string name="upload_error">Upload error:</string>
    <string name="upload_rescheduled">Upload rescheduled. 4</string>
    <string name="recycle_click">Recycle Click</string>
    <string name="loginManager_1">loading...</string>
    <string name="loginManager_2">We are updating our systems to improve your experience.Please try again later</string>
    <string name="loginManager_6">We are updating our systems to improve your experience. Please try again later,user,company</string>
    <string name="failConnexion">There is no internet, we will use local storage !!</string>
    <string name="failConnexion1">There is no internet, please activate your internet connection to continue!</string>
    <string name="loginManager_3">Verify My Device</string>
    <string name="loginManager_8">We tried to connect to the server but it does not respond,Please wait a few minutes and reload.</string>
    <string name="loginManager_4">Verify My Device</string>
    <string name="loginManager_5">Verify My Device</string>
    <string name="access_not_valid">Your access is not valid.</string>
    <string name="reconect_yourself">please reconnect yourself"</string>
    <string name="reload">reload</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="feature_not_available">Sorry but this feature is not yet available</string>
    <string name="notification_get_first_company">Let\'s first get your company details</string>
    <string name="no_connexion_when_change_company">Please make sure your internet connection is active before changing from Company</string>
    <string name="no_connexion_when_create_branch">Please make sure your internet connection is active before create new Branch</string>
    <string name="no_connexion_when_create_company">Please make sure your internet connection is active before create new Company</string>
    <string name="no_connexion_when_consult_sale_report"> Please make sure your Internet connection is active before viewing the sales reports </string>
    <string name="no_connexion_when_consult_employee"> Please make sure your Internet connection is active before consulting the Employees </string>
    <string name="notification_get_first_branch">Let\'s first get your Branch details</string>
    <string name="no_branch_available">No branch available</string>
    <string name="create_new_company_home">Create new Company</string>
    <string name="inventory_for_branch_home">inventory for branch</string>
    <string name="hi_user">Hi, User</string>
    <string name="sales_target">sales target</string>
    <string name="update_sale">Update sale</string>
    <string name="no_permission_to_change_date">Please, you do not have enough rights to see the content of this page! </string>
    <string name="c1">New Sale</string>
    <string name="c2">Reports</string>
    <string name="c3">Inventory</string>
    <string name="c4">Employee</string>
    <string name="title_activity_company_create">CompanyCreate</string>
    <string name="title_create_company">Create a new company</string>
    <string name="company_name">Name</string>
    <string name="company_domain">Domain</string>
    <string name="company_phone">Phone</string>
    <string name="company_email">Email</string>
    <string name="save_company">Save</string>
    <string name="title_activity_list_company">ListCompany</string>
    <string name="title_list_company">Your Companies</string>
    <string name="title_activity_location_create">LocationCreate</string>
    <string name="title_create_location">Add New Branch</string>
    <string name="branch_name">Branch name</string>
    <string name="branch_name2">Branch name.</string>
    <string name="branch_phone">Branch phone</string>
    <string name="branch_currency">Branch currency</string>
    <string name="branch_currency2">Branch currency.</string>
    <string name="sale_report_this_month">This month</string>
    <string name="branch_address">Branch address</string>
    <string name="save_branch">Save</string>
    <string name="title_activity_maps">Map</string>
    <string name="location_maps">location</string>
    <string name="location_button_click">MyLocation button clicked</string>
    <string name="current_location">Current location:</string>
    <string name="edit_location">Edit branch</string>
    <string name="title_activity_list_location">ListLocation</string>
    <string name="title_list_location">Branches</string>
    <string name="cardview_location_1">Location</string>
    <string name="cardview_location_2">Address Los app Douala</string>
    <string name="no_adress">No Address</string>
    <string name="title_search_location">Search for a branch</string>
    <string name="Search_location">Search</string>
    <string name="marker_in_sydney">Marker in Sydney</string>
    <string name="paris">Paris</string>
    <string name="ville_name">city</string>
    <string name="pays_name">country</string>
    <string name="postal_code">postal code</string>
    <string name="rue">unit number</string>
    <string name="All">All</string>
    <string name="Search">Search</string>
    <string name="Produce">Produce</string>
    <string name="Films">Films</string>
    <string name="Foods">Foods</string>
    <string name="Music">Music</string>
    <string name="more">More</string>
    <string name="title_activity_item_create">ItemCreate</string>
    <string name="title_activity_inventory">Inventory</string>
    <string name="all">All</string>
    <string name="inventory_for_branch">Inventory for branch</string>
    <string name="the_location">"The Location "</string>
    <string name="message_no_inventory">" has no inventory. click + to add new items "</string>
    <string name="the">" to the "</string>
    <string name="select_branch_from_map_icon">" , or select a different branch from the map icon above "</string>
    <string name="the_item">"This Product "</string>
    <string name="message_no_discount">" has no discounts. click + to add new discounts "</string>
    <string name="the_discount">" to this product. "</string>
    <string name="qty">Qty : </string>
    <string name="custumerAskReceipt">Receipt  :</string>
    <string name="custumerNoAskReceipt">No receipt  :</string>
    <string name="custumerAmount">Amount  :</string>
    <string name="custumerOccurences">Occurences  :</string>
    <string name="nbr_sellers">Sellers</string>
    <string name="nbr_branches">Branches</string>
    <string name="user">User</string>
    <string name="company">Company</string>
    <string name="my_inventories">My Inventories</string>
    <string name="title_search_inventory">Inventory Search</string>
    <string name="title_activity_inventory_create">inventory_create</string>
    <string name="title_add_inventory">Add New Inventory</string>
    <string name="inventory_adress">Enter Adress</string>
    <string name="inventory_map">Select Map</string>
    <string name="item_create_button">Save</string>
    <string name="inventory_description">Description</string>
    <string name="iventory_name">Name</string>
    <string name="iventory_name_label">Inventory name</string>
    <string name="iventory_create_button">Save</string>
    <string name="saveOk">Inventory saved </string>
    <string name="noItems">There is no item for this inventory</string>
    <string name="title_add_new_item">Add New Item</string>
    <string name="goods">GOODS</string>
    <string name="service">SERVICE</string>
    <string name="rental">RENTAL</string>
    <string name="item_name">Item Name*</string>
    <string name="put_buyer_name">Buyer Name</string>
    <string name="input_buyer_name">Buyer Name</string>
    <string name="buyer_name">Buyer</string>
    <string name="exemple_item_name">pen, book, etc</string>
    <string name="item_number">Item Number</string>
    <string name="exemple_item_number">QR / Barcode / SKU number</string>
    <string name="item_price">Price*</string>
    <string name="item_qte">Qty*</string>
    <string name="item_price2">Price</string>
    <string name="item_qte2">Qty</string>
    <string name="date_start">Start date*</string>
    <string name="date_end">End date*</string>
    <string name="item_cat">Categories*</string>
    <string name="item_hint_cat">Select Categories</string>
    <string name="item_hint_name">Item Title</string>
    <string name="item_description">Description</string>
    <string name="item_taxe">Taxable Item</string>
    <string name="save_item">Save</string>
    <string name="confirm_created_item">Item was created</string>
    <string name="reduce_size_image">Your image is very large, please reduce the size</string>
    <string name="wrong">Something went wrong</string>
    <string name="title_edit_item">Edit Item</string>
    <string name="confirm_update_item">Item was updated</string>
    <string name="confirm_delete_productentity">ProductEntity Delete</string>
    <string name="title">Title</string>
    <string name="title_view_item">View Item</string>
    <string name="no_image_available">No Image available</string>
    <string name="login_help">Help ?</string>
    <string name="login_hint"> 234 567 895</string>
</resources>