<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main_content"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@mipmap/background1"
app:layout_dodgeInsetEdges="bottom"
android:fitsSystemWindows="true"
tools:context=".Login">


<LinearLayout
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background2"
    android:alpha="1"
    android:gravity="center"
    android:orientation="vertical">


</LinearLayout>


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:layout_marginTop="25dp"
            android:layout_weight="0.53"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/login_7"
                    android:textColor="@android:color/white"
                    android:textSize="35dp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/login_8"
                    android:textColor="@android:color/white"
                    android:textSize="33dp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.47"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.49"
                    android:gravity="left"
                    android:orientation="vertical">


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="0.05"
                    android:alpha=".70"
                    android:background="@drawable/loginbutton"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        app:cardCornerRadius="22dp"
                        app:cardElevation="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="left|center_vertical"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:id="@+id/select_country"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="left"
                                android:minHeight="48dp"
                                android:orientation="horizontal">

                                <ImageView
                                    android:id="@+id/flag_country"
                                    android:layout_width="35dp"
                                    android:layout_height="35dp"
                                    android:layout_gravity="center"
                                    android:layout_marginLeft="10dp"
                                    android:padding="5dp"
                                    app:srcCompat="@drawable/no_country_code" />

                                <TextView
                                    android:id="@+id/code_country"
                                    android:layout_width="40dp"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center"
                                    android:layout_marginLeft="5dp"
                                    android:gravity="left|center_vertical"
                                    android:text="xx" />

                                <ImageView
                                    android:id="@+id/flech"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center"
                                    android:layout_marginLeft="5dp"
                                    android:layout_marginRight="5dp"
                                    app:srcCompat="@drawable/liste" />

                                <View
                                    android:layout_width="1dp"
                                    android:layout_height="match_parent"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="10dp"
                                    android:background="@color/black_transparent_18" />
                            </LinearLayout>

                            <EditText
                                android:id="@+id/phone_number"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:hint="@string/login_hint"
                                android:inputType="phone"
                                android:minHeight="48dp"
                                android:singleLine="true"
                                android:textColor="@android:color/black"
                                android:textSize="13dp" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:gravity="right|center_vertical"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:gravity="right"
                                app:srcCompat="@drawable/good" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.49"
                    android:gravity="left"
                    android:orientation="vertical">
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.49"
                    android:gravity="left"
                    android:orientation="vertical">


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="0.05"
                    android:background="@drawable/loginbutton"
                    android:gravity="center"
                    android:minHeight="48dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/login_2"
                        android:textColor="#1F7FA9"
                        android:textSize="12dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.49"
                    android:gravity="left"
                    android:orientation="vertical">

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login_3"
                android:textColor="@android:color/white"
                android:textSize="12dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/login_4"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="12dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/login_5"
                    android:textColor="@android:color/white"
                    android:textSize="12dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/login_6"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="12dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center"
                android:minHeight="48dp"
                android:singleLine="true"
                android:text="@string/login_help"
                android:textColor="@android:color/white"
                android:textSize="16dp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/modal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    card_view:cardBackgroundColor="@android:color/transparent"
    card_view:cardElevation="0dp" />



</androidx.coordinatorlayout.widget.CoordinatorLayout>
